tests/sumo/extended/calibrator/errors/invalid_flow/errors.sumo
Warning: No flow intervals in calibrator 'slow'.
Error: flow cannot be created
Quitting (on error).
